--- a/src/Assman.dotLess/Assman.dotLess.csproj
+++ b/src/Assman.dotLess/Assman.dotLess.csproj
@@ -77,6 +77,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assman.dotLess.nuspec" />
+    <None Include="NuGet\Content\Assman.config.transform" />
+    <None Include="NuGet\Content\Web.config.transform" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
