--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -240,7 +240,15 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="NuGet\Assman.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assman.nuspec" />
+    <None Include="NuGet\Content\Assman.config" />
+    <None Include="NuGet\Content\Web.config.transform" />
+    <None Include="NuGet\Tools\Assman.MSBuild.tasks" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
