--- a/src/Assman.Mvc/Assman.Mvc2.nuspec
+++ b/src/Assman.Mvc/Assman.Mvc2.nuspec
@@ -16,9 +16,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\..\output\lib\Mvc2\**\Assman.Mvc.dll" target="lib" />
-    <file src="..\..\..\output\lib\Mvc2\**\Assman.Mvc.xml" target="lib" />
-    <file src="Content\**\*.*" target="Content" />
-    <file src="Tools\*.*" target="Tools" />
+    <file src="NuGet\lib\Mvc2\**\Assman.Mvc.dll" target="lib" />
+    <file src="NuGet\lib\Mvc2\**\Assman.Mvc.xml" target="lib" />
+    <file src="NuGet\Content\**\*.*" target="Content" />
+    <file src="NuGet\Tools\*.*" target="Tools" />
   </files>
 </package>
