--- a/src/Assman.YuiCompressor/Assman.YuiCompressor.csproj
+++ b/src/Assman.YuiCompressor/Assman.YuiCompressor.csproj
@@ -45,6 +45,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\lib\BuildTools\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="YuiCompressorCssContentFilter.cs" />
     <Compile Include="YuiCompressorJavascriptContentFilter.cs" />
