--- a/src/Assman.dotLess/Assman.dotLess.csproj
+++ b/src/Assman.dotLess/Assman.dotLess.csproj
@@ -64,6 +64,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\lib\BuildTools\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="IgnoreRoutesForLessUrls.cs" />
     <Compile Include="LessContentFilter.cs" />
     <Compile Include="dotLessAssmanPlugin.cs" />
