--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -80,6 +80,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\lib\BuildTools\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="AspNetShortLivedResourceCache.cs" />
     <Compile Include="AssemblyExtensions.cs" />
     <Compile Include="BuildSupport\ILogger.cs" />
