Renamed the Assman NuGet package to Assman.Core to better convey that it usually won't be installed in isolation.

--- a/src/Assman.dotLess/Assman.dotLess.nuspec
+++ b/src/Assman.dotLess/Assman.dotLess.nuspec
@@ -11,7 +11,7 @@
     <description>Integrates dotLess with Assman.  This allows you to automatically consolidate your .less files in with other .less or .css files</description>
     <tags>javascript css mash consolidation mvc</tags>
     <dependencies>
-      <dependency id="Assman" version="1.9" />
+      <dependency id="Assman.Core" version="1.9" />
       <dependency id="dotLess" version="[1.1.0,)" />
     </dependencies>
   </metadata>
