--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -247,7 +247,7 @@
     <Content Include="NuGet\Assman.dll" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assman.nuspec" />
+    <None Include="Assman.Core.nuspec" />
     <None Include="NuGet\Content\Assman.config" />
     <None Include="NuGet\Content\Web.config.transform" />
     <None Include="NuGet\Tools\Assman.MSBuild.tasks" />
