Removed the Content from the Assman.Core NuGet package so that it is just binaries and tools. All Content is set up by integration packages (such as Assman.Mvc.). Fixed a bug with parsing ///<reference> elements that I caught along the way.

--- a/src/Assman.Mvc/Assman.Mvc.csproj
+++ b/src/Assman.Mvc/Assman.Mvc.csproj
@@ -82,7 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assman.Mvc2.nuspec" />
-    <None Include="Assman.Mvc3.nuspec" />
+    <None Include="Assman.Mvc3.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="NuGet\Content\Assman.config.transform" />
     <None Include="NuGet\Content\Web.config.transform" />
     <None Include="NuGet\Mvc3\Content\Views\Web.config.transform" />
