--- a/src/Assman.YuiCompressor/Assman.YuiCompressor.csproj
+++ b/src/Assman.YuiCompressor/Assman.YuiCompressor.csproj
@@ -55,7 +55,9 @@
     <Compile Include="YuiJavascriptCompressorPlugin.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assman.YuiCompressor.nuspec" />
+    <None Include="Assman.YuiCompressor.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="NuGet\Content\Assman.config.transform" />
     <None Include="packages.config" />
   </ItemGroup>
