Stopped appending the rid parameter to the resource url's when running in Release mode.

--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Handlers\HttpHandlerBase.cs" />
     <Compile Include="Handlers\ResourceHandlerBase.cs" />
     <Compile Include="ICompiledResource.cs" />
+    <Compile Include="InMemoryThreadSafeResourceCache.cs" />
     <Compile Include="IO\IFileAccess.cs" />
     <Compile Include="IO\StreamExtensions.cs" />
     <Compile Include="IResourceCache.cs" />
