--- a/src/Assman.UnitTests/Assman.UnitTests.csproj
+++ b/src/Assman.UnitTests/Assman.UnitTests.csproj
@@ -121,6 +121,7 @@
     <Compile Include="TestResourceFinder.cs" />
     <Compile Include="TestConsolidatedResourceHandler.cs" />
     <Compile Include="TestAssmanConfiguration.cs" />
+    <Compile Include="TestVirtualPathExtensions.cs" />
     <Compile Include="TestVirtualPathResolver.cs" />
     <Compile Include="TestVisualStudioDependencyProvider.cs" />
   </ItemGroup>
