Converted bool settings to ResourceModeCondition enums instead. This will allow for more flexibility/customization and more clarity.

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -12,7 +12,7 @@
           <add regex="~/Scripts/^Microsoft.+\.js$" />
         </include>
       </group>
-      <group consolidatedUrl="~/Scripts/Consolidated/Disabled.js" consolidate="false">
+      <group consolidatedUrl="~/Scripts/Consolidated/Disabled.js" consolidate="Never">
         <include>
           <add regex="~/Scripts/Unconsolidated/.+" />
         </include>
