Added final touches for version 2.0.0.  Tagging comes next.

--- a/src/Assman.dotLess/Assman.dotLess.csproj
+++ b/src/Assman.dotLess/Assman.dotLess.csproj
@@ -85,6 +85,7 @@
     </None>
     <None Include="NuGet\Content\Assman.config.transform" />
     <None Include="NuGet\Content\Web.config.transform" />
+    <None Include="NuGet\Tools\Install.ps1" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
