Only upped the version for Assman.Core.  Everything else stays at 2.0.0 for now.

--- a/lib/BuildTools/project.targets
+++ b/lib/BuildTools/project.targets
@@ -47,7 +47,7 @@
   </Target>
 
   <Target Name="_GenerateCommonAssemblyInfo">
-    <MSBuild Projects="$(MSBuildThisFileDirectory)\version.proj">
+    <MSBuild Projects="$(MSBuildThisFileDirectory)\version.proj" Properties="ProjectVersion=$(ProjectVersion)">
       <Output TaskParameter="TargetOutputs" PropertyName="AssmanVersion"/>
     </MSBuild>
   </Target>
