Refactored the AspNetShortLivedResourceCache object to not rely on the rid parameter as it was causing problems when trying to debug scripts accross web requests.  Instead, we just went with a short shared cache of 15 seconds.

--- a/src/Assman.UnitTests/Assman.UnitTests.csproj
+++ b/src/Assman.UnitTests/Assman.UnitTests.csproj
@@ -97,7 +97,7 @@
     <Compile Include="TestEmbeddedResourceFinder.cs" />
     <Compile Include="TestPluginElement.cs" />
     <Compile Include="TestResourceCompiler.cs" />
-    <Compile Include="TestResourceHttpHandlerFactory.cs" />
+    <Compile Include="Handlers\TestResourceHttpHandlerFactory.cs" />
     <Compile Include="TestAssmanContext.cs" />
     <Compile Include="TestAssmanContext_GetResourceUrl.cs" />
     <Compile Include="TestAssmanContext_PreConsolidation.cs" />
@@ -118,7 +118,7 @@
     <Compile Include="TestResourceCollection.cs" />
     <Compile Include="TestResourceGroupElement.cs" />
     <Compile Include="TestResourceFinder.cs" />
-    <Compile Include="TestConsolidatedResourceHandler.cs" />
+    <Compile Include="Handlers\TestConsolidatedResourceHandler.cs" />
     <Compile Include="TestAssmanConfiguration.cs" />
     <Compile Include="TestVirtualPathExtensions.cs" />
     <Compile Include="TestVirtualPathResolver.cs" />
